--- a/aaapplemusic/build.gradle
+++ b/aaapplemusic/build.gradle
@@ -1,9 +1,9 @@
 apply plugin: 'com.android.library'
+apply plugin: 'com.github.dcendents.android-maven'
+group = 'com.github.aaronat1'
 
 android {
     compileSdkVersion 26
-
-
 
     defaultConfig {
         minSdkVersion 19
